# ChessLensCPP

./: .gitignore  BoardDetection.cpp  BoardDetection.h  BoardSaddle.cpp  BoardSaddle.h  BoardSaddle_tmp.cpp  BoardSaddle_tmp.h  CMakeLists.txt  ChessGameState.cpp  ChessGameState.h  ChessHMM.cpp  ChessHMM.h  ChessHMM_tmp.cpp  ChessHMM_tmp.h  ChessLens.cpp  ChessLens.h  ImageProvider.cpp  ImageProvider.h  LibCameraCapture.cpp  LibCameraCapture.h  OcclusionDetector.cpp  OcclusionDetector.h  PieceCropper.cpp  PieceCropper.h  PieceDetection.cpp  PieceDetection.h  PieceDetectionCNN.cpp  PieceDetectionCNN.h  README.md  WakeupModule.cpp  WakeupModule.h  build.sh  main.cpp
ContextAwareModels/: HMM.cpp  HMM.h
Utils/: ChessUtils.cpp  ChessUtils.h  Utils.cpp  Utils.h
